# token_auth

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  run.py  test_conn.py
src/application/: app.py  logger_settings.py  settings.py
src/application/api/: register_api.py
src/application/api/dependencies/: role.py
src/application/database/: async_session.py  holder.py
src/application/database/migrations/: env.py
src/application/depends/: provider.py
src/application/middleware/: cors.py
src/application/shared/: logutils.py
src/core/common/: exceptions.py
src/core/dto/: base_dto.py  role.py  user.py
src/core/entities/: role.py  user.py
src/core/enums/: role.py
src/core/exceptions/: exceptions.py
src/core/interface/: password_hasher.py  redis_service.py  session.py
src/core/interface/repo/: base_repo.py  role_repo.py  user_repo.py
src/core/interface/uow/: base_uow.py  uow_sql.py
src/core/schemas/: role.py  user.py
src/core/usecases/: create_role_usecase.py  create_user_usecase.py  get_many_roles_usecase.py  get_many_user_usecase.py  get_role_usecase.py  get_user_usecase.py
src/data/: mixin.py
src/data/dao/: base_dao_sql.py
src/data/models/: models.py
src/data/repo/: role_repo_impl.py  user_repo_impl.py
src/data/uow/: base_uow_impl.py  uow_sql_impl.py
src/infra/: password_hasher.py  redis_service_impl.py
tests/: settings.py
tests/unit/logger/: conftest.py  test_logger.py
tests/unit/uow/: conftest.py  test_base_uow.py
(+12 files in other folders)
